--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 <!-- Begin Head -->
 
 <head>
-    <title>SplashDash</title>
+    <title>图书管理系统 - 注册</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="">
@@ -46,6 +46,7 @@
 										</svg>
                                     </div>
                                 </div>
+
                                 <div class="ad-auth-feilds mb-20">
                                     <input name="email" id="email" type="text" placeholder="邮箱地址" class="ad-input">
                                     <div class="ad-auth-icon">
